# lookup

./: .gitignore  Cargo.toml  README.md
arithmetic/: Cargo.toml
arithmetic/src/: lib.rs  multilinear_poly.rs  univariate_poly.rs
logup/: Cargo.toml
logup/benches/: bench.rs
logup/src/: hyrax_kzg.rs  lib.rs  prover.rs  verifier.rs
lookup/: Cargo.toml
lookup/benches/: bench.rs
lookup/src/: lib.rs  prover.rs  verifier.rs
pcs/: Cargo.toml
pcs/src/: lib.rs  utils.rs
pcs/src/hyrax_kzg/: hyrax_kzg_1.rs  hyrax_kzg_2.rs  mod.rs
pcs/src/multilinear_kzg/: data_structures.rs  mod.rs
poly_iop/: Cargo.toml
poly_iop/src/: grand_prod_check.rs  lib.rs  perm_check.rs  sum_check.rs  zero_check.rs
utils/: Cargo.toml
utils/src/: lib.rs
