[package]
name = "lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
arithmetic = { path = "../arithmetic" }
ark-bn254 = { version = "0.4.0" }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-serialize =  { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
merlin = { version = "3.0.0", default-features = false }
pcs = { path = "../pcs" }
poly_iop = { path = "../poly_iop" }
utils = { path = "../utils" }

[features]
default = [ "print-trace" ]
print-trace = [ 
    "ark-std/print-trace" 
]
[[bench]]
name = "lookup-benches"
path = "benches/bench.rs"
harness = false