[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-serialize =  { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
merlin = { version = "3.0.0", default-features = false }